# dependabot

./: README.md  fass-lambda.yml  pyproject.toml  requirements.txt
.github/: dependabot.yml
src/: lambda_function.py
tests/: test_lambda_function.py
